--- a/dot_config/vim/vimrc.tmpl
+++ b/dot_config/vim/vimrc.tmpl
@@ -1,31 +1,20 @@
-" ========== XDG 规范的 Vim 主配置 ==========
-{{ template "vim_common" . }}
+" ========== XDG compliant Vim main config ==========
+" This file is managed by chezmoi. Rendered as ~/.config/vim/vimrc (Linux/macOS).
+" Includes common settings and plugin definitions.
+" vim-plug (plug.vim) is deployed directly by chezmoi – no auto‑install needed.
 
-" 根据操作系统设置 shell、剪贴板和插件目录
-{{- if eq .chezmoi.os "windows" }}
-  set shell=pwsh
-  set clipboard=unnamed
-  let s:plug_dir = expand('~/vimfiles/autoload/plug.vim')
-  let s:plugged_dir = '~/vimfiles/plugged'
-{{- else }}
-  set shell=/bin/bash          " 可按需修改为 /bin/zsh 等
-  set clipboard=unnamedplus
-  let s:plug_dir = expand('~/.vim/autoload/plug.vim')
-  let s:plugged_dir = '~/.vim/plugged'
-{{- end }}
+" Include common core (basic settings, directories, shell, clipboard)
+{{ template "editors/common/core" . }}
 
-" 安装 vim-plug（如果不存在）
-if empty(glob(s:plug_dir))
-  silent execute '!curl -fLo ' . s:plug_dir . ' --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim'
-  autocmd VimEnter * PlugInstall --sync | source $MYVIMRC
-endif
+" Plugin directory (XDG data directory)
+let s:plugged_dir = expand('~/.local/share/vim/plugged')
 
-" 插件列表
+" Plugin list (from shared template)
 call plug#begin(s:plugged_dir)
-Plug 'tpope/vim-sensible'
-Plug 'preservim/nerdtree'
-" 在此添加更多插件...
+{{ template "editors/vim/plugins" . }}
 call plug#end()
 
-" 快捷键
-nnoremap <Leader>n :NERDTreeToggle<CR>
+" Common key mappings
+{{ template "editors/common/mappings" . }}
+
+" Additional Unix-specific mappings can be added here if needed.
