fix: vim-plug download

--- a/dot_config/vim/vimrc.tmpl
+++ b/dot_config/vim/vimrc.tmpl
@@ -6,6 +6,12 @@
 " Include common core (basic settings, directories, shell, clipboard)
 {{ template "editors/common/core" . }}
 
+" ---------- vim-plug global settings ----------
+" Use SSH protocol for all plugins (improves speed, avoids HTTPS authentication popups).
+" Requires that you have an SSH key configured and added to your GitHub account.
+" See: https://docs.github.com/en/authentication/connecting-to-github-with-ssh
+let g:plug_url_format = 'git@github.com:%s.git'
+
 " Plugin directory (XDG data directory)
 let s:plugged_dir = expand('~/.local/share/vim/plugged')
 
@@ -16,5 +22,8 @@ call plug#end()
 
 " Common key mappings
 {{ template "editors/common/mappings" . }}
+
+" Vim-specific mappings (for plugins like NERDTree)
+{{ template "editors/vim/mappings" . }}
 
 " Additional Unix-specific mappings can be added here if needed.
