--- a/vimfiles/vimrc.tmpl
+++ b/vimfiles/vimrc.tmpl
@@ -1,16 +1,15 @@
 " ========== Windows Vim Configuration ==========
 " This file is managed by chezmoi. Rendered as ~/vimfiles/vimrc.
-" Includes common settings and plugin definitions.
-" vim-plug (plug.vim) is deployed directly by chezmoi – no auto‑install needed.
 
 " Include common core (basic settings, directories, shell, clipboard)
 {{ template "editors/common/core" . }}
 
-" Use SSH protocol for all plugins (improves speed, avoids popups)
-let g:plug_url_format = 'git@github.com:%s.git'
+" Include Vim core (auto-install vim-plug, Git mirror)
+{{ template "editors/vim/core" . }}
 
-" Plugin directory (Windows)
-let s:plugged_dir = expand('~/vimfiles/plugged')
+" ---------- vim-plug settings ----------
+" Plugin directory – use s:vim_data_dir defined in common/core
+let s:plugged_dir = s:vim_data_dir . '/plugged'
 
 " Plugin list (from shared template)
 call plug#begin(s:plugged_dir)
@@ -20,7 +19,7 @@ call plug#end()
 " Common key mappings
 {{ template "editors/common/mappings" . }}
 
-" Vim-specific mappings (for plugins like NERDTree)
+" Vim-specific mappings
 {{ template "editors/vim/mappings" . }}
 
 " Additional Windows-specific mappings can be added here if needed.
