--- a/vimfiles/vimrc.tmpl
+++ b/vimfiles/vimrc.tmpl
@@ -1,25 +1,33 @@
 " ========== Windows Vim Configuration ==========
 " This file is managed by chezmoi. Rendered as ~/vimfiles/vimrc.
+" It is intended for Windows only. If loaded on other systems, it warns and exits.
 
-" Include common core (basic settings, directories, shell, clipboard)
+" ----- Platform guard: only proceed on Windows -----
+if !has('win32') && !has('win64')
+    echohl WarningMsg
+    echo "Warning: This Vim configuration is intended for Windows only."
+    echo "It appears you are running on a Unix-like system. Exiting."
+    echohl None
+    finish
+endif
+
+" ----- Include common core (basic settings, directories, shell, clipboard) -----
 {{ template "editors/common/core" . }}
 
-" Include Vim core (auto-install vim-plug, Git mirror)
+" ----- Include Vim core (auto-install vim-plug, Git mirror) -----
 {{ template "editors/vim/core" . }}
 
-" ---------- vim-plug settings ----------
-" Plugin directory – use s:vim_data_dir defined in common/core
+" ----- vim-plug settings -----
+" Plugin directory – use s:vim_data_dir defined in common/core.
 let s:plugged_dir = s:vim_data_dir . '/plugged'
 
-" Plugin list (from shared template)
+" Plugin list (from shared template).
 call plug#begin(s:plugged_dir)
 {{ template "editors/vim/plugins" . }}
 call plug#end()
 
-" Common key mappings
+" ----- Key mappings -----
 {{ template "editors/common/mappings" . }}
-
-" Vim-specific mappings
 {{ template "editors/vim/mappings" . }}
 
 " Additional Windows-specific mappings can be added here if needed.
