chore: add template files suffix
fix: check vim/neovim termguicolors option

fix: vim-plug autoload

fix: vim-plug autoload

--- a/AppData/Local/nvim/init.lua.tmpl
+++ b/AppData/Local/nvim/init.lua.tmpl
@@ -10,9 +10,9 @@ if vim.fn.has('win32') == 0 then
 end
 
 vim.cmd([[
-{{ template "editors/common/core" . }}
-{{ template "editors/common/mappings" . }}
+{{ template "editors/common/core.vim" . }}
+{{ template "editors/common/mappings.vim" . }}
 ]])
 
 -- Load Neovim-specific core (bootstrap lazy.nvim and plugin config).
-{{ template "editors/nvim/core" . }}
+{{ template "editors/nvim/core.lua" . }}
